@@ -41,21 +41,19 @@
         onload="sizeToContent()" buttons="accept" 
         xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
   <groupbox align="center" orient="horizontal">
-    <vbox>
-      <text value="FireGPG" style="font-weight: bold; font-size: x-large;"/>
-      <text value="&version; 0.1"/>
-      <separator class="thin"/>
+    <text value="FireGPG" style="font-weight: bold; font-size: x-large;"/>
+    <text value="&version; 0.1"/>
+    <separator class="thin"/>
 
-      <text value="&createdBy;" style="font-weight: bold;"/>
-      <text value="FireGPG Team"/>
-      <separator class="thin"/>
+    <text value="&createdBy;" style="font-weight: bold;"/>
+    <text value="FireGPG Team"/>
+    <separator class="thin"/>
 
-      <text value="&homepage;" style="font-weight: bold;"/>
-      <text value="http://firegpg.tuxfamily.org/"
-            class="url"
-            onclick="window.open('http://firegpg.tuxfamily.org'); window.close();"/>
-      <separator class="thin"/>
-    </vbox>
+    <text value="&homepage;" style="font-weight: bold;"/>
+    <text value="http://firegpg.tuxfamily.org/"
+          class="url"
+          onclick="window.open('http://firegpg.tuxfamily.org'); window.close();"/>
+    <separator class="thin"/>
   </groupbox>
 </dialog>
 
