@@ -36,29 +36,15 @@
   - ***** END LICENSE BLOCK ***** -->
 
 <?xml-stylesheet href="chrome://global/skin/" type="text/css"?>
-<!DOCTYPE prefwindow SYSTEM "chrome://firegpg/locale/prefwindow.dtd">
-<prefwindow id="firegpg_preferences" xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul" 
-            title="&prefwindow.title;" onload="sizeToContent(); onLoad(this);">
-  <script src="misc.js"/>
-  <script src="cgpglin.js"/>
-  <script src="cgpgwin.js"/>
-  <script src="cgpg.js"/>
-  <script src="options.js"/>
-
-  <prefpane id="pane1" label="&pane1.title;">
-    <preferences>
-      <preference id="pref_gmail_enabled" name="extensions.firegpg.gmail_enabled" type="bool"/>
-      <preference id="pref_default_private_key" name="extensions.firegpg.default_private_key" type="string"/>
-    </preferences>
-
-    <checkbox id="check_gmail_enabled" preference="pref_gmail_enabled" label="&check_gmail_enabled.label;" 
-      accesskey="&check_gmail_enabled.accesskey;"/>
-
-    <spacer flex="1"/>
-    <label id="label_private_keys" value="&label_private_keys.text;"/>
-    <listbox id="list_private_keys" rows="4" onselect="privateKeySelected(this)"></listbox>
-  </prefpane>
-</prefwindow>
+<!DOCTYPE dialog SYSTEM "chrome://firegpg/locale/showtext.dtd">
+<dialog id="showtext_dialog" title="&title;" orient="vertical" autostretch="always" 
+        onload="sizeToContent(); onLoad(this);" 
+        xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"
+        buttons="extra1" buttonlabelextra1="&close;">
+  <script src="showtext.js"/>
+  <description control="text" id="description" value="&description;"/>
+  <textbox id="text" multiline="true" rows="25" cols="80" readonly="true" />
+</dialog>
 
 <!-- vim:ai:et:sw=2:ts=2:sts=2:tw=0:fenc=utf-8
  -->
